# vibecut

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api-setup.md  getting-started.md
docs/skills/: README.md
scripts/: new_project.py
skills/align-captions/: SKILL.md  align.py
skills/analyze-video/: SKILL.md  analyze.py
skills/audio-process/: SKILL.md  clean_voice.py  enhance.py
skills/chunk-process/: SKILL.md  batch_transcribe.py  mlx_transcribe.py  process_chunks.py  smart_chunk.py
skills/extract-clip/: SKILL.md  extract.py
skills/find-golden-segments/: SKILL.md  find_golden.py
skills/inspect-video/: SKILL.md  inspect_video.py
skills/make-video/: SKILL.md  make_video.py
skills/remotion-render/: SKILL.md  package-lock.json  package.json  props.json  tsconfig.json
skills/separate-audio/: SKILL.md  separate.py
skills/shared/: config.py  gemini_client.py  video_source.py
skills/talking-head/: SKILL.md  analyze_script.py  batch_analyze.py  generate_captions.py  generate_sections.py  lowres_convert.py  precision_trim.py  process_video.py  render_with_captions.py  sentence_split.py  stitch_clips.py
skills/transcribe-audio/: SKILL.md  transcribe.py
skills/transcribe-clip/: SKILL.md  transcribe.py
skills/validate-media/: SKILL.md  validate.py
skills/voice-clone/: SKILL.md  clone.py  speak.py
skills/write-script/: SKILL.md  style_guide.md  write_script.py
templates/: schema.json
templates/commentary/: template.json
templates/highlights/: template.json
templates/raw-clip/: template.json
(+9 files in other folders)
